@@ -5,7 +5,7 @@
 
     <groupId>com.simtechdata</groupId>
     <artifactId>iGet</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <packaging>jar</packaging>
 
     <name>iGet</name>
@@ -20,14 +20,12 @@
         <maven-jar-plugin>3.4.1</maven-jar-plugin>
         <maven-assembly-plugin>3.7.1</maven-assembly-plugin>
         <maven-enforcer-plugin>3.4.1</maven-enforcer-plugin>
-        <maven-antrun-plugin>3.1.0</maven-antrun-plugin>
         <exec-maven-plugin>3.2.0</exec-maven-plugin>
         <versions-maven-plugin>2.16.2</versions-maven-plugin>
-        <javafx.version>21</javafx.version>
-        <javafx-maven-plugin>0.0.8</javafx-maven-plugin>
-        <gluonfx-maven-plugin>1.0.21</gluonfx-maven-plugin>
-        <imageName>igram</imageName>
+        <maven-antrun-plugin>3.1.0</maven-antrun-plugin>
+        <imageName>iget</imageName>
         <mainClass>com.simtechdata.Main</mainClass>
+        <graalFolder>${project.basedir}/graalvm</graalFolder>
         <system-linker-arg/>
         <system-native-image-arg/>
         <compatibility-arg/>
@@ -43,7 +41,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.36</version>
+            <version>2.0.12</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -131,7 +129,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <finalName>iGet</finalName>
+                    <finalName>${name}</finalName>
                 </configuration>
                 <executions>
                     <execution>
@@ -151,7 +149,6 @@
                 <configuration>
                     <source>22</source>
                     <target>22</target>
-                    <release>22</release>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
@@ -171,4 +168,52 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
+    <profiles>
+        <!--native profile-->
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <!-- GraalVM Native Maven Plugin -->
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <target>${java.version}</target>
+                            <imageName>${imageName}</imageName>
+                            <mainClass>${mainClass}</mainClass>
+                            <verbose>true</verbose>
+                            <buildArgs>
+                                <arg>-Djava.awt.headless=true</arg>
+                                <arg>--no-fallback</arg>
+                                <arg>--verbose</arg>
+                                <arg>--enable-preview</arg>
+                                <arg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</arg>
+                                <arg>-cp
+                                    ${user.home}/.m2/repository/org/xerial/sqlite-jdbc/3.45.3.0/sqlite-jdbc-3.45.3.0.jar
+                                </arg>
+                                <arg>-march=compatibility</arg>
+                                <arg>-H:+UnlockExperimentalVMOptions</arg>
+                                <arg>-H:+ReportExceptionStackTraces</arg>
+                                <arg>-H:JNIConfigurationFiles=${graalFolder}/jni-config.json</arg>
+                                <arg>-H:DynamicProxyConfigurationFiles=${graalFolder}/proxy-config.json</arg>
+                                <arg>-H:ReflectionConfigurationFiles=${graalFolder}/reflect-config.json</arg>
+                                <arg>-H:ResourceConfigurationFiles=${graalFolder}/resource-config.json</arg>
+                                <arg>-H:SerializationConfigurationFiles=${graalFolder}/serialization-config.json</arg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
